<resources>
    <string name="app_name">CarINSA</string>
    <string name="action_settings">Settings</string>
    <string name="bottom_sheet_peek">bottom_sheet_peek</string>
    <string name="bottom_sheet_content">bottom_sheet_content</string>
    <string-array name="tableau">
        <item>android</item>
        <item>iPhone</item>
        <item>tutoriel</item>
        <item>iPod</item>
        <item>iPad</item>
        <item>blackberry</item>
        <item>tutoriaux</item>
        <item>Tuto Mobile</item>
        <item>tutorial</item>
        <item>bada</item>
        <item>tuto</item>

    </string-array>

    <string name="feedbacktype1">Parking Public</string>
    <string name="feedbacktype2">Parking Privé</string>
    <string name="feedbacktype3">Stationnement Trottoire</string>
    <string name="feedbacktitle">Informations sur le parking</string>
    <string name="feedbacktype">Type du Parking</string>
    <string name="feedbackbutton">Valider</string>

    <string name="capacity">Capacité</string>
    <string name="capacity1">1-20 (Petit)</string>
    <string name="capacity2">21-80 (Moyen)</string>
    <string name="capacity3">80+ (Grand)</string>
    <string name="capacity4">300+ (Très Grand)</string>

    <string name="Payant">Gratuit</string>
    <string name="Gratuit">Payant</string>
</resources>
