<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="300dp"
    android:layout_height="310dp"

    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/customborder"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:text="@string/feedbacktitle"
            android:textSize="8pt"></TextView>

        <TextView
            android:layout_width="119dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:text="Type du parking:" />


        <Spinner
            android:id="@+id/SpinnerFeedbackType"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:entries="@array/feedbacktypelist"
            android:prompt="@string/feedbacktype"></Spinner>

        <TextView
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Estimation de la capacité:" />


        <Spinner
            android:id="@+id/SpinnerCapacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:entries="@array/capacitylist"
            android:prompt="@string/capacity"></Spinner>

        <TextView
            android:layout_width="100dp"
            android:layout_gravity="center"
            android:layout_height="25dp"
            android:text="Tarification:"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <RadioGroup
                android:id="@+id/radioPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/radioP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/Payant" />

                <RadioButton
                    android:id="@+id/radioG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"


                    android:text="@string/Gratuit" />

            </RadioGroup>


        </LinearLayout>

        <Button
            android:id="@+id/ButtonSendFeedback"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="sendFeedback"
            android:text="@string/feedbackbutton"></Button>
        <!--Put form controls here-->

    </LinearLayout>
</ScrollView>
